ajustando los tiles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <h1 class="title-1">Reliable, efficient delivery</h1>
       <h1 class="title-2">Powered by Technology</h1>
       <p class="sub-title">
-        Our Artificial Intelligence powered tools use millions of project data
+        Our Artificial Intelligence powered tools use millions of project
+        data<br />
         points to ensure that your project is successful
       </p>
     </header>
@@ -54,27 +55,47 @@
           />
         </div>
       </article>
-      <article>
+      <article class="container-center">
         <div class="tile-2">
-          <h2>Team Builder</h2>
-          <p>
-            Scans our talent network to create the optimal team for your project
+          <h2 class="title-tile-2">Team Builder</h2>
+          <p class="tile-des-2">
+            Scans our talent network to create the <br />
+            optimal team for your project
           </p>
-          <img src="../images/icon-team-builder.svg" alt="icon-team-builder" />
+          <img
+            class="img-2"
+            src="../images/icon-team-builder.svg"
+            alt="icon-team-builder"
+            width="50px"
+          />
         </div>
         <div class="tile-3">
-          <h2>Karma</h2>
-          <p>Regularly evaluates our talent to ensure quality</p>
-          <img src="../images/icon-karma.svg" alt="icon-karma" />
+          <h2 class="title-tile-3">Karma</h2>
+          <p class="tile-des-3">
+            Regularly evaluates our talent to ensure <br />
+            quality
+          </p>
+          <img
+            class="img-3"
+            src="../images/icon-karma.svg"
+            alt="icon-karma"
+            width="50px"
+          />
         </div>
       </article>
       <article>
         <div class="tile-4">
-          <h2>Calculator</h2>
-          <p>
-            Uses data from past projects to provide better delivery estimates
+          <h2 class="title-tile-4">Calculator</h2>
+          <p class="tile-des-4">
+            Uses data from past projects to provide <br />better delivery
+            estimates
           </p>
-          <img src="../images/icon-calculator.svg" alt="icon-calculator" />
+          <img
+            class="img-4"
+            src="../images/icon-calculator.svg"
+            alt="icon-calculator"
+            width="50px"
+          />
         </div>
       </article>
     </section>
@@ -84,7 +105,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Yennys Ollarves</a>.
       </p>
     </footer>
   </body>
