--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       <h1 class="title-1">Reliable, efficient delivery</h1>
       <h1 class="title-2">Powered by Technology</h1>
       <p class="sub-title">
-        Our Artificial Intelligence powered tools use millions of project
-        data<br />
+        Our Artificial Intelligence powered tools use millions of project data
         points to ensure that your project is successful
       </p>
     </header>
